# requirements_manager

./: LICENSE  README.md  pyproject.toml
src/requirements_manager/: __init__.py  cli.py  core.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_utils.py
